package com.cimparato.csbm.domain.enumeration;

public enum CloudServiceStatus {
    ACTIVE, EXPIRED, PENDING_RENEWAL
}
