package com.cimparato.csbm.domain.enumeration;

public enum CloudServiceType {
    HOSTING, PEC, SPID, FATTURAZIONE, FIRMA_DIGITALE, CONSERVAZIONE_DIGITALE
}
