package com.cimparato.csbm.domain.enumeration;

public enum JobStatus {
    PENDING, PROCESSING, COMPLETED, FAILED, CANCELLED
}
