package com.cimparato.csbm.domain.file;

public enum FileErrorType {
    PARSING_ERROR, PROCESSING_ERROR
}
