package com.cimparato.csbm.domain.file;

public enum FileOperationType {
    CREATE, UPDATE
}
