package com.cimparato.csbm.domain.file;

public enum FileUploadStatus {
    PENDING, PROCESSING, COMPLETED, FAILED, CANCELLED
}
